--- a/styles.css
+++ b/styles.css
@@ -57,35 +57,60 @@ p {
   display: block;
 }
 
-
-.quiz-header{
-    display: flex;
-    justify-content: space-between;
+.quiz-header {
+  display: flex;
+  justify-content: space-between;
 }
 
-.question{
-    text-align: left;
-    font-size: 1.4rem;
+#question-text {
+  text-align: left;
+  font-size: 1.4rem;
 }
 
-.progress-bar{
-    width: 100%;
-    height: 10px;
-    background-color: #f8f0e5;
-    border-radius: 10px;
-    overflow: hidden;
+.progress-bar {
+  width: 100%;
+  height: 10px;
+  background-color: #f8f0e5;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-#progress{
-    height: 100%;
-    width: 0%;
-    background-color: #e86a33; 
+#progress {
+  height: 100%;
+  width: 0%;
+  background-color: #e86a33;
 }
 
-#result{
-    margin-bottom: 30px;
+#result {
+  margin-bottom: 30px;
 }
 
-#result-message{
-    font-size: 1.4rem;
+#result-message {
+  font-size: 1.4rem;
+}
+
+#answers-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.answers-btn{
+  margin: 10px;
+  text-align: left;
+  background-color: white;
+  color: #333;
+  border: 2px solid #e86a33;
+  transition: all 0.3s ease;
+}
+
+.answers-btn.correct {
+  background-color: #e6fff0;
+  border-color: #a3f0c4;
+  color: #28a745;
+}
+
+.answers-btn.incorrect {
+  background-color: #fff0f0;
+  border-color: #ffbdbd;
+  color: #dc3545;
 }
